fixing more immutability errors